--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,52 @@
-<h1>hi</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+        <meta charset='utf-8' />
+            <title></title>
+                <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+                    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.js'></script>
+                        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.css' rel='stylesheet' />
+                            <style>
+        body { margin:0; padding:0; }
+                #map { position:absolute; top:0; bottom:0; width:100%; }
+                    </style>
+  </head>
+  <body>
+
+<style>
+    #menu {
+              position: absolute;
+                        background: #fff;
+                                  padding: 10px;
+                                            font-family: 'Open Sans', sans-serif;
+                                                  }
+</style>
+
+<div id='map'></div>
+
+
+
+<script>
+mapboxgl.accessToken = 'pk.eyJ1IjoidWdpYWNvbWFuIiwiYSI6ImNpbW8xdTUwejAwYXF1N2x5dmRydnpuZTIifQ.YF2LyOa-5Ookoi4_kpmCEg';
+var map = new mapboxgl.Map({
+      container: 'map',
+          style: 'mapbox://styles/mapbox/dark-v8',
+              zoom: 4,
+                  center: [-98.873,39.213]
+});
+
+
+
+
+
+
+
+
+
+
+
+
+</script>
+
+  </body>
+</html>
