--- a/templates/index.html
+++ b/templates/index.html
@@ -24,29 +24,7 @@
 
 <div id='map'></div>
 
-
-
-<script>
-mapboxgl.accessToken = 'pk.eyJ1IjoidWdpYWNvbWFuIiwiYSI6ImNpbW8xdTUwejAwYXF1N2x5dmRydnpuZTIifQ.YF2LyOa-5Ookoi4_kpmCEg';
-var map = new mapboxgl.Map({
-      container: 'map',
-          style: 'mapbox://styles/mapbox/dark-v8',
-              zoom: 4,
-                  center: [-98.873,39.213]
-});
-
-
-
-
-
-
-
-
-
-
-
-
-</script>
+<script type='text/javascript' src='static/js/main.js'> </script>
 
   </body>
 </html>
