compatible with lab comps

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
 <div id='map'></div>
 
-<script type='text/javascript' src='static/js/main.js'> </script>
+<script type='text/javascript' src="{{ url_for('static', filename='js/main.js')}}"> </script>
 
   </body>
 </html>
