--- a/templates/min_cost.html
+++ b/templates/min_cost.html
@@ -25,6 +25,9 @@ var map = new mapboxgl.Map({
 });
 
 map.on('load', function(){
+    var currentLocation = window.location.pathname;
+    var procedure = currentLocation.split("/")[2]; 
+    console.log(procedure);   
 
     // Add a new source from our GeoJSON data and set the
     // 'cluster' option to true.
@@ -32,7 +35,7 @@ map.on('load', function(){
         type: "geojson",
         // Point to GeoJSON data. This example visualizes all M1.0+ earthquakes
         // from 12/22/15 to 1/21/16 as logged by USGS' Earthquake hazards program.
-        data: "/mincost/asdf",
+        data: "/mincost/" + procedure,
         cluster: true,
         clusterMaxZoom: 14, // Max zoom to cluster points on
         clusterRadius: 50 // Radius of each cluster when clustering points (defaults to 50)
