--- a/templates/min_cost.html
+++ b/templates/min_cost.html
@@ -13,85 +13,69 @@
 </head>
 <body>
 
-<div id='map'></div>
+<style>
+.mapboxgl-popup {
+    max-width: 400px;
+    font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
 
+.marker-title {
+    font-weight: 700;
+}
+</style>
+<div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoidWdpYWNvbWFuIiwiYSI6ImNpbW8xdTUwejAwYXF1N2x5dmRydnpuZTIifQ.YF2LyOa-5Ookoi4_kpmCEg';
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/ugiacoman/cinhop0me000damm704bfxnav',
-    center: [-103.59179687498357, 40.66995747013945],
-    zoom: 3,
+    center: [-100.04, 38.907],
+    zoom: 3
 });
 
-map.on('load', function(){
+map.on('load', function () {
     var currentLocation = window.location.pathname;
-    var procedure = currentLocation.split("/")[2]; 
-    console.log(procedure);   
-
-    // Add a new source from our GeoJSON data and set the
-    // 'cluster' option to true.
-    map.addSource("earthquakes", {
-        type: "geojson",
-        // Point to GeoJSON data. This example visualizes all M1.0+ earthquakes
-        // from 12/22/15 to 1/21/16 as logged by USGS' Earthquake hazards program.
-        data: "/mincost/" + procedure,
-        cluster: true,
-        clusterMaxZoom: 14, // Max zoom to cluster points on
-        clusterRadius: 50 // Radius of each cluster when clustering points (defaults to 50)
+    var procedure = currentLocation.split("/")[2];     
+    // Add marker data as a new GeoJSON source.
+    map.addSource('states', {
+        'type': 'geojson',
+        'data': '/mincost/' + procedure,
     });
 
-    // Use the earthquakes source to create five layers:
-    // One for non-clustered markers, three for each cluster category,
-    // and one for cluster labels.
+    // Add a layer showing the markers.
     map.addLayer({
-        "id": "non-cluster-markers",
-        "type": "symbol",
-        "source": "earthquakes",
-        "layout": {
-            "icon-image": "marker-15"
+        'id': 'states-layer',
+        'type': 'fill',
+        'source': 'states',
+        'paint': {
+            'fill-color': 'rgba(200, 100, 240, 0.4)',
+            'fill-outline-color': 'rgba(200, 100, 240, 1)'
         }
     });
+});
 
-    // Display the earthquake data in three layers, each filtered to a range of
-    // count values. Each range gets a different fill color.
-    var layers = [
-        [150, '#f28cb1'],
-        [20, '#f1f075'],
-        [0, '#51bbd6']
-    ];
 
-    layers.forEach(function (layer, i) {
-        map.addLayer({
-            "id": "cluster-" + i,
-            "type": "circle",
-            "source": "earthquakes",
-            "paint": {
-                "circle-color": layer[1],
-                "circle-radius": 18
-            },
-            "filter": i == 0 ?
-                [">=", "point_count", layer[0]] :
-                ["all",
-                    [">=", "point_count", layer[0]],
-                    ["<", "point_count", layers[i - 1][0]]]
-        });
-    });
+// When a click event occurs near a marker icon, open a popup at the location of
+// the feature, with description HTML from its properties.
+map.on('click', function (e) {
+    var features = map.queryRenderedFeatures(e.point, { layers: ['states-layer'] });
+    if (!features.length) {
+        return;
+    }
 
-    // Add a layer for the clusters' count labels
-    map.addLayer({
-        "id": "cluster-count",
-        "type": "symbol",
-        "source": "earthquakes",
-        "layout": {
-            "text-field": "{point_count}",
-            "text-font": [
-                    "DIN Offc Pro Medium",
-                    "Arial Unicode MS Bold"
-                ],
-            "text-size": 12
-        }
-    });
+    var feature = features[0];
+
+    var popup = new mapboxgl.Popup()
+        .setLngLat(map.unproject(e.point))
+        .setHTML(feature.properties.name)
+        .addTo(map);
+});
+
+// Use the same approach as above to indicate that the symbols are clickable
+// by changing the cursor style to 'pointer'.
+map.on('mousemove', function (e) {
+    var features = map.queryRenderedFeatures(e.point, { layers: ['states-layer'] });
+    map.getCanvas().style.cursor = (features.length) ? 'pointer' : '';
 });
 </script>
 
